# hisi-riscv-rs

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ONBOARDING.md  README.md  ROADMAP.md  lychee.toml  rust-analyzer.toml  rust-toolchain.toml
.agents/skills/hil-regression/: SKILL.md
.agents/skills/hil-smoke/: SKILL.md  hil.sh
.agents/skills/qemu-smoke/: SKILL.md
.agents/skills/qemu-vs-hil/: SKILL.md  parity.sh
.agents/skills/release-train/: SKILL.md
.agents/skills/run-ws63-rs/: SKILL.md  driver.sh
.agents/skills/safe-unsafe-verify/: SKILL.md
.agents/skills/stable-unstable/: SKILL.md
.agents/skills/submodule-commit/: SKILL.md
.agents/skills/typed-config/: SKILL.md  scan.sh
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: hil-triage.md  register-auditor.md  unsafe-auditor.md
.claude/skills/hil-regression/: SKILL.md  regression.sh
.claude/skills/hil-smoke/: SKILL.md
.claude/skills/qemu-smoke/: SKILL.md  smoke.sh
.claude/skills/qemu-vs-hil/: SKILL.md
.claude/skills/release-train/: SKILL.md  train.sh
.claude/skills/run-ws63-rs/: SKILL.md  driver.sh
.claude/skills/safe-unsafe-verify/: SKILL.md  verify.sh
.claude/skills/stable-unstable/: SKILL.md
.claude/skills/submodule-commit/: SKILL.md
.claude/skills/typed-config/: SKILL.md
.codex/: hooks.json
.codex/agents/: register-auditor.toml  unsafe-auditor.toml
.github/: changelog-config.json  dependabot.yml
.github/scripts/: install-toolchain.sh
.github/workflows/: ci-nightly.yml  ci.yml  documentation.yml  hil.yml  issue-handler.yml  merge-conflict.yml  publish.yml  release.yml
bs21-examples/: Cargo.toml
bs21-examples/blinky/: Cargo.toml  build.rs
bs21-examples/blinky/src/: main.rs
bs21-examples/uart_hello/: Cargo.toml  build.rs  memory.x
bs21-examples/uart_hello/src/: main.rs
bs21-pac/: Cargo.toml  build.rs  device.x
bs21-pac/src/: lib.rs
chips/ws63/flashboot/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  layout.ld
chips/ws63/flashboot/asm/: startup.S
chips/ws63/flashboot/src/: image.rs  sfc.rs  sha256.rs
chips/ws63/rf/: CHANGELOG.md  Cargo.toml  README.md
docs/: README.md  book.toml  bs21-recon.md
docs/architecture/: async-embassy.md  hisi-riscv-hal.md  hisi-riscv-rt.md  overview.md  ws63-RF.md  ws63-examples.md  ws63-flashboot.md  ws63-guide.md  ws63-hal.md  ws63-pac.md  ws63-rt.md  ws63-svd.md
docs/review/: 0.5.0-acceptance.md  api-style-discussion-2026-06.md  architecture-review-2026-05.md  config-tightening-design-0.5.md  config-tightening-designs.json  peripheral-dma-design-0.5.1.md  safe-unsafe-formal-verification-research-2026-07.md  stable-api-graduation-review-2026-07-02.md  unsafe-audit-2026-07-01.md  unsafe-audit-2026-07-02.md
docs/src/: 00-introduction.md  SUMMARY.md  introduction.md
docs/src/explanation/: 00-index.md  01-architecture.md  02-boot-flow.md  03-hardfloat-toolchain.md  04-async-embassy.md  05-secure-boot.md  06-qemu-model.md  07-hil-framework.md  architecture.md  async-embassy.md  boot-flow.md  hardfloat-toolchain.md  hil-framework.md  index.md  qemu-model.md  safe-unsafe-policy.md  secure-boot.md  stable-unstable.md  typed-config.md
docs/src/how-to/: 00-index.md  01-install-toolchain.md  02-build-example.md  03-package-image.md  04-flash-probe-rs.md  05-flash-hisiflash.md  06-hardware-runner.md  07-run-hil-tests.md  08-debug-probe-rs.md  09-new-project.md  10-add-driver.md  add-driver.md  build-example.md  debug-probe-rs.md  flash-hisiflash.md  flash-probe-rs.md  hardware-runner.md  index.md  install-toolchain.md  new-project.md  package-image.md  run-hil-tests.md
docs/src/reference/: 00-index.md  01-memory-map.md  02-examples.md  03-hal-api.md  04-peripherals.md  05-toolchain.md  06-image-format.md  07-hil-markers.md  08-cli-tools.md  09-known-issues.md  cli-tools.md  examples.md  hal-api.md  hil-markers.md  image-format.md  index.md  known-issues.md  memory-map.md  peripherals.md  toolchain.md
docs/src/tutorials/: 00-index.md  01-setup.md  02-blinky.md  03-uart-hello.md  04-qemu.md  05-first-hil.md  index.md
examples/bs20/: Cargo.toml  rust-analyzer.toml
examples/bs20/blinky/: Cargo.toml
examples/bs20/blinky/src/: main.rs
examples/bs20/clock_rng/: Cargo.toml
examples/bs20/clock_rng/src/: main.rs
examples/bs20/dma_mem/: Cargo.toml
examples/bs20/dma_mem/src/: main.rs
examples/bs20/gadc_read/: Cargo.toml  memory.x
examples/bs20/gadc_read/src/: main.rs
examples/bs20/hid_demo/: Cargo.toml
examples/bs20/hid_demo/src/: main.rs
examples/bs20/i2c_scan/: Cargo.toml
examples/bs20/i2c_scan/src/: main.rs
examples/bs20/pwm_wdt/: Cargo.toml
examples/bs20/pwm_wdt/src/: main.rs
examples/bs20/spi_loopback/: Cargo.toml  build.rs
examples/bs20/spi_loopback/src/: main.rs
examples/bs20/uart_hello/: Cargo.toml  build.rs
examples/bs20/uart_hello/src/: main.rs
examples/bs21/: Cargo.toml  rust-analyzer.toml
examples/bs21/blinky/: Cargo.toml
examples/bs21/clock_rng/: Cargo.toml
examples/bs21/dma_mem/: Cargo.toml
examples/bs21/embassy_multitask/: Cargo.toml
examples/bs21/embassy_multitask/src/: main.rs
examples/bs21/gadc_read/: Cargo.toml
examples/bs21/hid_demo/: Cargo.toml
examples/bs21/hid_demo/src/: main.rs
examples/bs21/i2c_scan/: Cargo.toml
examples/bs21/timer_irq/: Cargo.toml
examples/bs21/timer_irq/src/: main.rs
hil/: README.md  cargo-run-hw.sh  embedded-test-runner.sh  flash.sh  hil-smoke.sh  pack.sh
tests-hil/: Cargo.toml  build.rs
tests-hil/src/: lib.rs
tests-hil/tests/: hil.rs
ws63-flashboot/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  memory.x
ws63-flashboot/src/: image.rs  main.rs  sfc.rs  sha256.rs  uart.rs
ws63-rf-rs/: Cargo.toml  README.md  build.rs
ws63-rf-rs/examples/: net_selftest.rs  sched_selftest.rs
ws63-rf-rs/src/: alloc.rs  error.rs  frw.rs  hcc.rs  ipc.rs  lib.rs  libc.rs  litos.rs  log.rs  netif.rs  netif_smoltcp.rs  oal.rs  osal.rs  osal_adapt.rs  osal_ext.rs  osal_queue.rs  osal_sync.rs  osal_wait.rs  sched.rs  selftest.rs  timer.rs  uapi.rs
ws63-rf-rs/tools/: mac-link-residual.sh
(+51 files in other folders)
