[workspace]
resolver = "3"
members = [
    "ws63-pac",
    "ws63-hal",
    "ws63-rt",
    "ws63-examples/blinky",
    "ws63-examples/uart_hello",
    "ws63-examples/timer_irq",
    "ws63-examples/gpio_irq",
    "ws63-examples/reset_demo",
    "ws63-examples/dma_loopback",
    "ws63-examples/wifi_blob_link",
    "ws63-examples/rf_port_demo",
    "ws63-examples/semihost_selftest",
    "ws63-rf-rs",
    "ws63-flashboot",
]
# default-members = the libraries + the blinky example (which links via ws63-rt's
# exported linker scripts; see ws63-rt/build.rs + ws63-examples/blinky/build.rs).
# ws63-flashboot is excluded: it is experimental and NOT secure boot
# (see ws63-flashboot/README.md). It stays a workspace `member` so
# `cargo check --workspace` covers it; build it explicitly with
# `cargo build -p ws63-flashboot`.
default-members = [
    "ws63-pac",
    "ws63-hal",
    "ws63-rt",
    "ws63-examples/blinky",
    "ws63-examples/uart_hello",
    "ws63-examples/timer_irq",
    "ws63-examples/gpio_irq",
    "ws63-examples/reset_demo",
    "ws63-examples/dma_loopback",
    "ws63-examples/wifi_blob_link",
    "ws63-examples/rf_port_demo",
    "ws63-examples/semihost_selftest",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["sanchuanhehe"]
license = "MIT"
repository = "https://github.com/sanchuanhehe/ws63-rs"

[workspace.dependencies]
ws63-pac = { path = "ws63-pac" }
ws63-hal = { path = "ws63-hal" }
ws63-rt  = { path = "ws63-rt" }

# External dependencies
riscv = "0.13"
riscv-rt = "0.14"
embedded-hal = "1.0.0"
embedded-io = "0.6"
nb = "1"
critical-section = "1"

# ws63-hal (a standalone submodule) depends on ws63-pac via a registry version
# requirement so it builds on its own. Inside this monorepo we redirect that to the
# local submodule so EVERY crate links exactly ONE ws63-pac instance (otherwise the
# PAC's #[no_mangle] DEVICE_PERIPHERALS static is defined twice → link failure, and
# the singleton-safety invariant is split across two copies).
[patch.crates-io]
ws63-pac = { path = "ws63-pac" }

[profile.release]
opt-level = "s"
lto = true
debug = true
codegen-units = 1

[profile.dev]
opt-level = "s"
