[workspace]
resolver = "3"
members = [
    "ws63-pac",
    "bs21-pac",
    "hisi-riscv-hal",
    "hisi-riscv-rt",
    "ws63-examples/blinky",
    "ws63-examples/uart_hello",
    "ws63-examples/timer_irq",
    "ws63-examples/gpio_irq",
    "ws63-examples/reset_demo",
    "ws63-examples/dma_loopback",
    "ws63-examples/wifi_blob_link",
    "ws63-examples/rf_port_demo",
    "ws63-examples/semihost_selftest",
    "ws63-examples/custom_memory",
    "ws63-examples/async_delay",
    "ws63-examples/embassy_multitask",
    "ws63-examples/embassy_async_io",
    "ws63-examples/async_bus",
    "ws63-examples/spi_loopback",
    "ws63-examples/i2c_scan",
    "ws63-examples/net_ping",
    "ws63-rf-rs",
    "ws63-flashboot",
]
# default-members = the libraries + the blinky example (which links via hisi-riscv-rt's
# exported linker scripts; see hisi-riscv-rt/build.rs + ws63-examples/blinky/build.rs).
# ws63-flashboot is excluded: it is experimental and NOT secure boot
# (see ws63-flashboot/README.md). It stays a workspace `member` so
# `cargo check --workspace` covers it; build it explicitly with
# `cargo build -p ws63-flashboot`.
default-members = [
    "ws63-pac",
    "hisi-riscv-hal",
    "hisi-riscv-rt",
    "ws63-examples/blinky",
    "ws63-examples/uart_hello",
    "ws63-examples/timer_irq",
    "ws63-examples/gpio_irq",
    "ws63-examples/reset_demo",
    "ws63-examples/dma_loopback",
    "ws63-examples/wifi_blob_link",
    "ws63-examples/rf_port_demo",
    "ws63-examples/semihost_selftest",
    "ws63-examples/custom_memory",
    "ws63-examples/async_delay",
    "ws63-examples/embassy_multitask",
    "ws63-examples/embassy_async_io",
    "ws63-examples/async_bus",
    "ws63-examples/spi_loopback",
    "ws63-examples/i2c_scan",
    "ws63-examples/net_ping",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["sanchuanhehe"]
license = "MIT"
repository = "https://github.com/sanchuanhehe/hisi-riscv-rs"

[workspace.dependencies]
ws63-pac = { path = "ws63-pac" }
hisi-riscv-hal = { path = "hisi-riscv-hal" }
hisi-riscv-rt  = { path = "hisi-riscv-rt" }

# External dependencies
riscv = "0.13"
riscv-rt = "0.14"
embedded-hal = "1.0.0"
embedded-io = "0.6"
nb = "1"
critical-section = "1"

# hisi-riscv-hal (a standalone submodule) depends on ws63-pac via a registry version
# requirement so it builds on its own. Inside this monorepo we redirect that to the
# local submodule so EVERY crate links exactly ONE ws63-pac instance (otherwise the
# PAC's #[no_mangle] DEVICE_PERIPHERALS static is defined twice → link failure, and
# the singleton-safety invariant is split across two copies).
[patch.crates-io]
ws63-pac = { path = "ws63-pac" }
bs21-pac = { path = "bs21-pac" }

[profile.release]
opt-level = "s"
lto = true
debug = true
codegen-units = 1

[profile.dev]
opt-level = "s"
