[workspace]
resolver = "3"
members = [
    "crates/pac/ws63-pac",
    "crates/pac/bs2x-pac",
    "crates/hisi-riscv-hal",
    "crates/hisi-riscv-rt",
    "examples/ws63/blinky",
    "examples/ws63/uart_hello",
    "examples/ws63/timer_irq",
    "examples/ws63/gpio_irq",
    "examples/ws63/reset_demo",
    "examples/ws63/dma_loopback",
    "examples/ws63/wifi_blob_link",
    "examples/ws63/rf_port_demo",
    "examples/ws63/semihost_selftest",
    "examples/ws63/custom_memory",
    "examples/ws63/async_delay",
    "examples/ws63/embassy_multitask",
    "examples/ws63/embassy_async_io",
    "examples/ws63/async_bus",
    "examples/ws63/spi_loopback",
    "examples/ws63/i2c_scan",
    "examples/ws63/net_ping",
    "chips/ws63/rf",
    "chips/ws63/flashboot",
]
# default-members = the libraries + the blinky example (which links via hisi-riscv-rt's
# exported linker scripts; see hisi-riscv-rt/build.rs + ws63-examples/blinky/build.rs).
# ws63-flashboot is excluded: it is experimental and NOT secure boot
# (see ws63-flashboot/README.md). It stays a workspace `member` so
# `cargo check --workspace` covers it; build it explicitly with
# `cargo build -p ws63-flashboot`.
default-members = [
    "crates/pac/ws63-pac",
    "crates/hisi-riscv-hal",
    "crates/hisi-riscv-rt",
    "examples/ws63/blinky",
    "examples/ws63/uart_hello",
    "examples/ws63/timer_irq",
    "examples/ws63/gpio_irq",
    "examples/ws63/reset_demo",
    "examples/ws63/dma_loopback",
    "examples/ws63/wifi_blob_link",
    "examples/ws63/rf_port_demo",
    "examples/ws63/semihost_selftest",
    "examples/ws63/custom_memory",
    "examples/ws63/async_delay",
    "examples/ws63/embassy_multitask",
    "examples/ws63/embassy_async_io",
    "examples/ws63/async_bus",
    "examples/ws63/spi_loopback",
    "examples/ws63/i2c_scan",
    "examples/ws63/net_ping",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["sanchuanhehe"]
license = "MIT"
repository = "https://github.com/sanchuanhehe/hisi-riscv-rs"

[workspace.dependencies]
ws63-pac = { path = "crates/pac/ws63-pac" }
hisi-riscv-hal = { path = "crates/hisi-riscv-hal" }
hisi-riscv-rt  = { path = "crates/hisi-riscv-rt" }

# External dependencies
riscv = "0.13"
riscv-rt = "0.14"
embedded-hal = "1.0.0"
embedded-io = "0.6"
nb = "1"
critical-section = "1"

# hisi-riscv-hal (a standalone submodule) depends on ws63-pac via a registry version
# requirement so it builds on its own. Inside this monorepo we redirect that to the
# local submodule so EVERY crate links exactly ONE ws63-pac instance (otherwise the
# PAC's #[no_mangle] DEVICE_PERIPHERALS static is defined twice → link failure, and
# the singleton-safety invariant is split across two copies).
[patch.crates-io]
ws63-pac = { path = "crates/pac/ws63-pac" }
bs2x-pac = { path = "crates/pac/bs2x-pac" }

[profile.release]
opt-level = "s"
lto = true
debug = true
codegen-units = 1

[profile.dev]
opt-level = "s"
