[package]
name = "bs21-pac"
version = "0.1.0"
edition = "2024"
description = "Peripheral Access Crate for HiSilicon BS21/BS2X (RISC-V, SparkLink/NearLink). Reuses ws63-pac's identical versioned IP register blocks (UART v151, GPIO v150, timer v150) with BS21 base addresses + interrupt map."
license = "MIT"
keywords = ["bs21", "bs2x", "hisilicon", "riscv", "embedded"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
critical-section = { version = "1", optional = true }
vcell = "0.1"
# BS21's UART/timer/GPIO/etc. IP blocks are the SAME versioned silicon as WS63
# (UART v151, timer v150, GPIO v150 — confirmed against fbb_bs2x). Reuse ws63-pac's
# register-block field definitions; bs21-pac only redefines base addresses, the
# interrupt map, and the `Peripherals` set. (A future cleanup can hoist the shared
# register blocks into a chip-neutral `hisi-pac-regs` crate.)
ws63-pac = { version = "0.1", default-features = false }

# The `riscv` crate only builds for riscv targets; the interrupt module's riscv
# re-exports + the `#[riscv::pac_enum]` impl are cfg-gated to riscv32, so the crate
# still compiles on host (letting downstream HAL host-tests link).
[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = "0.13"

[features]
default = ["critical-section"]
rt = []

[profile.release]
opt-level = "s"
lto = true

[patch.crates-io]
ws63-pac = { git = "https://github.com/sanchuanhehe/ws63-pac" }
