# On-target HIL (hardware-in-the-loop) test crate for the WS63 RISC-V target.
#
# `cargo test` here builds a libtest-compatible test ELF that the patched
# probe-rs fork (`probe-rs run`) flashes to a real WS63 board and drives via
# RISC-V semihosting (embedded-test's "run each test in turn" protocol). See
# ../hil/README.md for the exact command.
#
# This crate is deliberately a workspace *member* but is EXCLUDED from
# default-members, so a plain `cargo build` / `cargo build --workspace` does NOT
# pull embedded-test (semihosting harness). Build it explicitly:
#   cargo test -p tests-hil --target riscv32imfc-unknown-none-elf --no-run
[package]
name = "tests-hil"
version = "0.1.0"
edition = "2024"
description = "On-target (semihosting) HIL tests for the WS63 RISC-V target, run via probe-rs + embedded-test"
license = "MIT"
publish = false

[dependencies]
# The PAC under test: we exercise its structural facts (base-address constants)
# and a single volatile register read (QEMU + bare-board safe; no external
# wiring). Exactly one PAC is linked, selected by the chip feature below; both
# are `optional` so the inactive one is never compiled. Registry version (not a
# path dep) so the workspace-root `[patch.crates-io]` redirect to the local
# crates/pac/* paths applies — same pattern as hisi-riscv-hal/rt. We name the
# active PAC via a cfg-selected alias in tests/hil.rs (`ws63_pac as pac` /
# `bs2x_pac as pac`) — the HAL keeps its PAC `pub(crate)`.
ws63-pac = { version = "0.1", optional = true }
bs2x-pac = { version = "0.1", optional = true }
# The HAL is linked too so its no-atomic / critical-section configuration and
# (transitively) the same single PAC instance are exercised under test. Chip
# selection is deferred to the chip feature (default-features off; the chip
# feature turns on the matching `chip-*` + `rt`).
hisi-riscv-hal = { path = "../crates/hisi-riscv-hal", default-features = false }
# hisi-riscv-rt provides the startup + critical-section impl + the riscv-rt
# runtime that calls embedded-test's exported `main` (see tests/hil.rs). Chip
# selection (and, for WS63, the `boot-header` feature that bakes the 0x300
# HiSilicon image header into the test ELF at flash 0x230000 so the bare ELF is
# directly bootable by flashboot) is turned on by the chip feature below.
hisi-riscv-rt = { path = "../crates/hisi-riscv-rt", default-features = false }
# The WS63/BS2X core has no atomic extension; mirror the HAL: portable-atomic's
# RMW polyfill goes through critical-section (impl registered by hisi-riscv-rt).
# embedded-test (via `semihosting`) needs a real critical-section impl in graph.
portable-atomic = { version = "1", default-features = false, features = ["critical-section"] }
critical-section = "1"

[features]
# Chip selection mirrors hisi-riscv-hal: exactly one chip, WS63 the default. Each
# pulls its PAC and turns on the matching `chip-*` (+ `rt`) features of the HAL
# and rt. The `boot-header` feature (link-time 0x300 header at flash 0x230000) is
# WS63-specific (BS21's app partition is 0x90000, a different header placement —
# out of scope here) so it is gated under chip-ws63 only.
default = ["chip-ws63"]
chip-ws63 = [
    "dep:ws63-pac",
    "hisi-riscv-hal/chip-ws63",
    "hisi-riscv-hal/rt",
    "hisi-riscv-rt/chip-ws63",
    # WS63-only: bake the 0x300 image header into the test ELF (bootable by flashboot).
    "hisi-riscv-rt/boot-header",
    # WS63-only: pull rt's bundled WS63 memory.x onto the link-search path so
    # ws63-link.x's `INCLUDE memory.x` resolves. (default-features=false dropped it;
    # rt's default had it on.) BS21 has no bundled memory.x — a BS21 board would
    # supply its own here (see examples/bs21/clock_rng), which is out of scope.
    "hisi-riscv-rt/bundled-memory-x",
]
chip-bs21 = [
    "dep:bs2x-pac",
    "hisi-riscv-hal/chip-bs21",
    "hisi-riscv-hal/rt",
    "hisi-riscv-rt/chip-bs21",
]

[dev-dependencies]
# embedded-test brings its own test harness + panic-handler + a `main` entry
# (exported as the C symbol `main`, which hisi-riscv-rt's runtime_init calls).
# Default features = ["semihosting", "panic-handler"] — exactly what the WS63
# semihosting test-report channel needs (validated on silicon 2026-06-14).
embedded-test = "0.7"
# Provides the `embedded-test.x` linker fragment on the link-search path so
# build.rs's `-Tembedded-test.x` resolves (lets embedded-test stay a dev-dep).
embedded-test-linker-script = "0.1"

[lib]
# We bring our own (embedded-test) harness; disable the default libtest harness
# for the lib's own unit-test target (there are none) so `cargo test` does not
# try to link the std `test` crate or require a panic handler for the bare lib.
harness = false
test = false
bench = false

[[test]]
name = "hil"
# Important: embedded-test IS the harness; the default libtest one would pull in
# the std `test` crate (unavailable on this no_std target) and a panic handler.
harness = false

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
lto = true
debug = true
