[package]
name = "bs21_uart_hello"
version = "0.1.0"
edition = "2024"
description = "HiSilicon BS21 UART hello-world example (prints over UART0 @ 0x52081000)"
license = "MIT"

[[bin]]
name = "bs21_uart_hello"
path = "src/main.rs"

[dependencies]
bs2x-pac = { path = "../../bs2x-pac" }
hisi-riscv-hal = { path = "../../hisi-riscv-hal", default-features = false, features = ["chip-bs21", "rt"] }
hisi-riscv-rt  = { path = "../../hisi-riscv-rt", default-features = false, features = ["chip-bs21"] }
riscv = "0.13"

[profile.release]
opt-level = "s"
lto = true
