# BS20 example firmware — a DEDICATED workspace, deliberately separate from the
# root ws63-rs workspace.
#
# Why isolated: `hisi-riscv-hal` is a single crate that can be built for exactly one
# chip (a `compile_error!` enforces it). The root workspace's WS63 members select
# `chip-ws63`; these BS20 members select `chip-bs21`. If both lived in one
# workspace, `cargo build --workspace` would unify hisi-riscv-hal's features and pull in
# BOTH chips at once → compile_error. Keeping BS20 in its own workspace lets each
# side build its own hisi-riscv-hal flavour. The root workspace lists its members
# explicitly and does NOT include this dir, and this `[workspace]` makes it a
# separate root so the parent never sweeps it into `--workspace`.
#
# Build it on its own from here, e.g.:
#   cargo build --manifest-path bs20-examples/Cargo.toml
[workspace]
resolver = "3"
members = ["blinky", "uart_hello", "spi_loopback"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

# hisi-riscv-hal / bs2x-pac depend on the PACs by registry version (so they build
# standalone). Redirect to the local sources so every crate links exactly ONE
# ws63-pac / bs2x-pac (the PAC #[no_mangle] singleton static must be unique), and
# so we test the in-tree code. Paths are relative to this manifest (../ = ws63-rs).
[patch.crates-io]
ws63-pac = { path = "../../crates/ws63-pac" }
bs2x-pac = { path = "../../crates/bs2x-pac" }

[profile.release]
opt-level = "s"
lto = true
debug = true
codegen-units = 1

[profile.dev]
opt-level = "s"
