[package]
name = "ws63-flashboot"
version = "0.1.0"
edition = "2024"
description = "EXPERIMENTAL Rust second-stage bootloader for HiSilicon WS63 — NOT secure boot, not for production (see README)"
license = "MIT"
repository = "https://github.com/hispark-rs/hisi-riscv-rs"
keywords = ["ws63", "hisilicon", "riscv", "bootloader", "flashboot"]
categories = ["embedded", "no-std", "hardware-support"]
# Experimental crate: never published to crates.io.
publish = false

[[bin]]
name = "flashboot"
path = "src/main.rs"

# NOTE: flashboot intentionally does NOT depend on ws63-pac — it uses raw MMIO
# (see src/main.rs) so it stays minimal and standalone. Do not re-add ws63-pac:
# a second PAC copy would clash with hisi-riscv-hal's at link time (DEVICE_PERIPHERALS).
[dependencies]
riscv = "0.13"
critical-section = "1"

[profile.release]
opt-level = "s"
lto = true
debug = true
codegen-units = 1

[profile.dev]
opt-level = "s"
